nginx-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: nginx-deployment
  namespace: demodos
  labels:
    app: nginx-deployment

spec:
  replicas: 4
  selector:
    matchLabels:
      app: nginx-deployment

  template:
    metadata:
      labels:
        app: nginx-deployment

    spec:
      containers:
      - name: nginx-container
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-volume
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
      
      volumes:
      - name: nginx-volume
        configMap:
          name: ngninx-index-page
