nginx-ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: my-nginx-ingress
  namespace: demodos

spec:
  ingressClassName: nginx #se refriere a quien va a manejar el trafico
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-nginx-service
            port:
              number: 80
